# nonogram-aligned

./: README.md  bun.lockb  package-lock.json  package.json
src/app/: page.tsx
src/app/components/: Grid.tsx
src/components/: Cell.tsx  Clue.tsx  Grid.tsx
src/contracts/script/: NonogramValidatorDeploy.s.sol
src/contracts/src/: NonogramValidator.sol
src/contracts/test/: NonogramValidatorTest.sol
src/hooks/: UseWallet.ts
src/utils/: comp.ts  gridUtils.ts
zk_backend/: Cargo.toml  risc_zero_fibonacci.proof
zk_backend/core/: Cargo.toml
zk_backend/core/src/: lib.rs
zk_backend/methods/guest/: Cargo.toml
zk_backend/methods/guest/src/: main.rs
zk_backend/src/: main.rs
