# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true

[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { tag = "v2.0.15-fix-reconnections", features = [
    "ws",
    "rustls",
], git = "https://github.com/yetanotherco/ethers-rs.git" }
risc0-zkvm = { git = "https://github.com/risc0/risc0", tag = "v1.0.1" }
aligned-sdk = { git = "https://github.com/yetanotherco/aligned_layer", tag="v0.10.2" }
axum = { version = "0.7.7", features=["macros"]}
tokio = { version = "1.41.0", features = ["full"] }
tower = "0.5.1"
tower-http = {version = "0.6.1",features =["cors"]}
methods = { path = "methods" }
nonogram = {path ="core"}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand="0.8.5"
ndarray = { version = "0.16.1", features = ["serde"] }
ndarray-rand="0.15.0"
serde = "1.0"
serde_json="1.0.132"
bincode = "1.3.3"
bonsai-sdk = {version="1.1.2",features=["non_blocking"]}
anyhow ="1.0.91"
bytemuck="1.19.0"
hex="0.4.3"
